# dcagent-toolkit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-publish-datacommons-mcp.yaml  ci.yaml  evals.yaml
deploy/: README.md  autopush.yaml  bump_version.yaml  release.yaml  staging.yaml
docs/: dev.md  evals.md  get_started.md  quickstart.md  sample_agents.md  user_guide.md
docs/internal/: dev.md  evals.md
notebooks/: datacommons_mcp_tools_with_custom_agent.ipynb
scripts/: create_release_pr.py  create_staging_tag.py  get_next_version.py  wait_for_pypi.py
